--- a/index.html
+++ b/index.html
@@ -3,46 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ポートフォリオ</title>
+    <title>Atsuhiroのポートフォリオ</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div class="container">
-      <h1>XXX's Portfolio</h1>
+      <h1>Atsuhiroのポートフォリオ</h1>
       <p>関西在住の高専4年生です。メカトロ系の学科に在籍しています。</p>
 
-      <h2>Works</h2>
+      <h2>授業での成果物</h2>
 
-      <h3>2022年: 自律走行ロボットの設計製作</h3>
+      <h3>2023年: CAD設計製図</h3>
       <p>
-        3年次に「<strong>自律走行ロボットの開発プロジェクト</strong>」に取り組みました。
+        3年次のCAD設計製図では、Fusion360（<a>https://www.autodesk.com/jp/products/fusion-360/free-trial</a>）とKiCad（<a>https://www.kicad.org/</a>）を用いて3Dモデリングの基礎を学びました。今回は2つの成果物を紹介します。
       </p>
+      <h3>二輪駆動ロボットの設計</h3>
       <p>
-        具体的には超音波センサ（検知範囲:5-100cm）を用いた障害物回避システムを搭載した「キャタピラ型走行ロボット」をクラスメイト4名とチームを組んで、要件定義から完成まで約16週間かけて取り組みました。自分は、Fusion
-        360（3次元CAD）を用いた機械設計を担当し、シャーシやマウント類など計127個の部品を設計しました（加工も共同で担当しました）。また、制御系の補助として、Arduino
-        で動かす自律制御プログラムの実装とテスト、調整も担当しました。。
+        Fusion360を用いて部品の3Dモデルを作成し、最後にアセンブリして動作のシミュレーションを行いました。
       </p>
       <div class="img-2col-container">
         <div>
           <img src="work-01.jpg" />
         </div>
+      </div>
+      <h3>ESP拡張基盤の設計</h3>
+      <p>
+        こちらはKiCadで図面を描き、3Dモデルに変換しました。
+      </p>
+      <div class="img-2col-container">
         <div>
           <img src="work-02.jpg" />
         </div>
       </div>
 
-      <h2>Skills</h2>
+      <h2>2024年度基礎研究</h2>
+
+      <h3>基礎研究の概要</h3>
       <p>
-        授業やクラブ活動、文化祭活動、趣味を含めて利用経験のあるハードウェアやソフトウェアの一覧です。習熟度の目安として累積使用時間が10時間以上のものを「★」、30時間以上を「★★」、100時間以上を「★★★」と表記しています。
+        今回の基礎研究は「寿司をお客さんに提供するアームハンドの設計」をテーマに行われました。私の班は合計6人で活動し、制作期間はおよそ半年でした。
+      </p>
+      <div class="img-2col-container">
+        <div>
+          <img src="work-03.jpg" />
+        </div>
+      </div>
+      <h3>班の中での役割</h3>
+      <p>
+        今回、私は会計とプログラムを担当しました。私が作ったプログラムは高専祭当日の展示用で、来場者がアームハンドの操作を体験できるようにしました。
+      </p>
+      <div class="img-2col-container">
+        <div>
+          <img src="work-04.jpg" />
+        </div>
+      </div>
+
+      <h2>使用言語・ソフトウェア</h2>
+      <p>
+        授業やクラブ活動、文化祭活動、趣味を含めて利用経験のあるハードウェアやソフトウェアの一覧です。習熟度の目安として累積使用時間が10時間以上のものを「★」、30時間以上を「★★」、60時間以上を「★★★」と表記しています。
       </p>
       <ul>
-        <li>Fusion 360（3D-CAD）</li>
-        <li>汎用旋盤</li>
-        <li>ボール盤</li>
-        <li>フライス盤</li>
-        <li>Arduino</li>
-        <li>電子工作（ブレッドボード）</li>
-        <li>Python</li>
+        <li>Fusion 360（3D-CAD）: ★★★</li>
+        <li>KiCad: ★★</li>
+        <li>汎用旋盤: ★</li>
+        <li>ボール盤: ★★</li>
+        <li>フライス盤: ★</li>
+        <li>Arduino: ★★</li>
+        <li>電子工作（ブレッドボード）:★★</li>
+        <li>Python: ★</li>
+        <li>C言語: ★★</li>
       </ul>
     </div>
   </body>
