--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <h3>2023年: CAD設計製図</h3>
       <p>
-        3年次のCAD設計製図では、Fusion360（<a>https://www.autodesk.com/jp/products/fusion-360/free-trial</a>）とKiCad（<a>https://www.kicad.org/</a>）を用いて3Dモデリングの基礎を学びました。今回は2つの成果物を紹介します。
+        3年次のCAD設計製図では、<a href="https://www.autodesk.com/jp/products/fusion-360/free-trial">Fusion360</a>と<a href="https://www.kicad.org/">KiCad</a>を用いて3Dモデリングの基礎を学びました。今回は2つの成果物を紹介します。
       </p>
       <h3>二輪駆動ロボットの設計</h3>
       <p>
@@ -49,7 +49,7 @@
       </div>
       <h3>班の中での役割</h3>
       <p>
-        今回、私は会計とプログラムを担当しました。私が作ったプログラムは高専祭当日の展示用で、来場者がアームハンドの操作を体験できるようにしました。
+        今回、私は会計と制御を担当しました。私が作った回路とプログラムは高専祭当日の展示用で、来場者がアームハンドの操作を体験できるようにしました。
       </p>
       <div class="img-2col-container">
         <div>
