--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         Fusion360を用いて部品の3Dモデルを作成し、最後にアセンブリして動作のシミュレーションを行いました。
       </p>
       <p class="resizeimage">
-        <img src="work-01.jpg" alt="写真"/>
+        <img src="work-01.jpg" alt="写真1"/>
       </p>
       <h3>ESP拡張基盤の設計</h3>
       <p>
         こちらはKiCadで図面を描き、3Dモデルに変換しました。
       </p>
       <p class="resizeimage">
-        <img src="work-02.jpg" alt="写真"/>
+        <img src="work-02.jpg" alt="写真2"/>
       </p>
 
       <h2>2024年度基礎研究</h2>
@@ -38,15 +38,17 @@
       <p>
         今回の基礎研究は「寿司をお客さんに提供するアームハンドの設計」をテーマに行われました。私の班は合計6人で活動し、制作期間はおよそ半年でした。
       </p>
-      <p class="resizeimage">
-        <img src="work-03.jpg" alt="写真"/>
-      </p>
+      <div class="img-2col-container">
+        <div>
+          <img src="work-03.jpg" alt="写真3"/>
+        </div>
+      </div>
       <h3>班の中での役割</h3>
       <p>
         今回、私は会計と制御を担当しました。私が作った回路とプログラムは高専祭当日の展示用で、来場者がアームハンドの操作を体験できるようにしました。
       </p>
       <p class="resizeimage">
-        <img src="work-04.jpg" alt="写真"/>
+        <img src="work-04.jpg" alt="写真4"/>
       </p>
 
       <h2>使用言語・ソフトウェア</h2>
