--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
       <p>
         今回の基礎研究は「寿司をお客さんに提供するアームハンドの設計」をテーマに行われました。私の班は合計6人で活動し、制作期間はおよそ半年でした。
       </p>
-      <div class="img-2col-container">
-        <div>
-          <img src="work-03.jpg" alt="写真3"/>
-        </div>
-      </div>
+      <p class="resizeimage">
+        <img src="work-03.jpg" alt="写真3"/>
+      </p>
       <h3>班の中での役割</h3>
       <p>
         今回、私は会計と制御を担当しました。私が作った回路とプログラムは高専祭当日の展示用で、来場者がアームハンドの操作を体験できるようにしました。
